# flower-image-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: quickstart.ipynb
reports/: metrics.json
scripts/: download_data.py
src/flowerclf/: __init__.py  config.py  data.py  evaluate.py  model.py  predict.py  train.py
tests/: test_data.py  test_model.py
