[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flower-image-classifier"
version = "1.0.0"
description = "Transfer-learning image classifier for flower species using PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
